[tool.poetry]
name = "agent"
version = "0.2.0"
description = ""
authors = ["Frederic <frederic.vanreet@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.7"
kubernetes = "^11.0.0"
pyyaml = "^5.3.1"
arq = "^0.19"
stackl-client = "^0.2.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
start-agent = "agent.main:start"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
