[tool.poetry]
name = "agent"
version = "0.3.0dev"
description = ""
authors = ["Frederic <frederic.vanreet@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.7"
kubernetes = "^11.0.0"
pyyaml = "^5.3.1"
arq = "^0.19"
stackl-client = "0.2.5"
pydantic = "^1.6.1"
importlib-metadata = "^1.6.1"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"

[tool.poetry.scripts]
start-agent = "agent.main:start"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pylint."MESSAGES CONTROL"]
variable-rgx = "[a-z0-9_]{1,30}$"
disable = ["too-few-public-methods"]