[tool.poetry]
name = "core"
version = "0.2.1dev"
description = ""
authors = ["Frederic <frederic.vanreet@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
importlib-metadata = "^1.6.1"
attr = "^0.3.1"
attrs = "^19.3.0"
six = "^1.15.0"
pyparsing = "^2.4.7"
fastapi = "^0.55.1"
gunicorn = "^20.0.4"
uvicorn = "^0.11.5"
loguru = "^0.5.1"
redis = "^3.5.3"
arq = "^0.19"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
