[tool.poetry]
name = "job_broker"
version = "0.1.0"
description = ""
authors = ["Frederic <frederic.vanreet@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.7"
grpcio = "^1.29.0"
stackl = {path = "../../library/stackl"}
stackl-protos = {path = "../../library/stackl_protos"}
redis = "^3.5.3"
importlib_metadata = "^1.6.1"
attr = "^0.3.1"
attrs = "^19.3.0"
pyparsing = "^2.4.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
start-job-broker = "job_broker.main:start"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
