[tool.poetry]
name = "rest"
version = "0.1.2dev"
description = ""
authors = ["Frederic <frederic.vanreet@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "2.22.0"
redis = "3.4.1"
fastapi = "^0.55.1"
stackl = {path = "../../library/stackl"}

[tool.poetry.dev-dependencies]
uvicorn = "^0.11.5"
gunicorn = "^20.0.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
