[tool.poetry]
name = "rest"
version = "0.1.3dev"
description = ""
authors = ["Frederic <frederic.vanreet@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "2.22.0"
redis = "3.4.1"
fastapi = "^0.55.1"
stackl = {path = "../../library/stackl"}
gunicorn = "^20.0.4"
uvicorn = "^0.11.5"
pika = "^1.1.0"


[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
