[tool.poetry]
name = "worker"
version = "0.1.2dev"
description = ""
authors = ["Frederic <frederic.vanreet@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.7"
redis = "^3.5.3"
requests = "^2.23.0"
stackl = {path = "../../library/stackl"}

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[tool.poetry.scripts]
start-worker = "worker.main:start"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
