[tool.poetry]
name = "worker"
version = "0.1.3dev"
description = ""
authors = ["Frederic <frederic.vanreet@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.7"
redis = "^3.5.3"
requests = "^2.23.0"
stackl = {path = "../../library/stackl"}
importlib-metadata = "^1.6.1"
attr = "^0.3.1"
attrs = "^19.3.0"
six = "^1.15.0"
pyparsing = "^2.4.7"
pika = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[tool.poetry.scripts]
start-worker = "worker.main:start"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
